--- a/absolutely.css
+++ b/absolutely.css
@@ -1,3 +1,8 @@
+*{
+	margin: 0;
+	padding: 0;
+}
+
 body {
 	text-align : center;
 	font-family : Tahoma;
@@ -14,3 +19,480 @@ body {
 	border : 4px solid red;
 }
 
+nav {
+	height: 25px;
+	width: 100%;
+	background: black;
+	background: linear-gradient(rgba(0,0,0,1), rgba(255,255,255,0.4));
+}
+
+nav a {
+	margin-top: 5px;
+	text-decoration: none;
+	color: rgba(128,128,128,1);
+	padding-right: 45px;
+}
+
+#title {
+	position: absolute;
+	top: 65px;
+	left: 445px;
+}
+
+#saw {
+	position: relative;
+	top: 60px;
+	right: 55px;
+}
+
+#hammer {
+	position: absolute;
+	top: 40px;
+	left: 890px;
+}
+
+
+#toolbox {
+	height: 10px;
+	position: relative;
+	left: 200px;
+	display: block;
+}
+
+ul li a {
+	text-decoration: none;
+	color: black;
+}
+
+ul li {
+	border: solid 1px;
+	height: 20px;
+	padding-left: 2px;
+	padding-top: 2px;
+}
+
+.tooltip {
+	position: relative;
+	display: inline-block;
+}
+
+.tooltip .tooltiptext {
+	visibility: hidden;
+	width: 90px;
+	background-color: #ffffff;
+	color: black;
+	padding: 0 0;
+	list-style: none;
+	text-align: left;
+
+}
+
+.tooltiptext {
+	position: absolute;
+	top: 60px;
+	z-index: 10;
+}
+
+.tooltiptext li:hover {
+	background-color: #FFFFAA;
+}
+
+.tooltip:hover .tooltiptext {
+	visibility: visible;
+}
+
+#humanfactor span {
+	visibility: hidden;
+	color: black;
+	width: 210px;
+	background-color: white;
+	padding: 5px 0 5px 2px;
+	border-radius: 6px;
+	border-color: #0000FF;
+	border-width: 3px;
+	border-style: solid;
+	position: absolute;
+	right: 390px;
+	top: 623px;
+	z-index: 1;
+	margin-left: -60px;
+	opacity: 0;
+	transition: opacity 1s;
+}
+
+#humanfactor {
+	color: #2400F0;
+}
+
+#humanfactor:hover span {
+	visibility: visible;
+	opacity: 1;
+}
+
+
+#pincers {
+	position: relative;
+	top: 140px;
+	left: 350px;
+}
+
+#screwdriver {
+	position: relative;
+	left: 150px;
+}
+
+#text {
+	margin-top: 200px;
+	color: black;
+}
+
+h1, p {
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* DE CSS VOOR DE LOADING SCREEN */
+h1 {
+	background: rgba(255,255,255,0.5);
+}
+
+p {
+	background: rgba(255,255,255,0.5);
+}
+
+
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+main,
+nav,
+section,
+summary {
+	display: block;
+}
+
+audio,
+canvas,
+video {
+	display: inline-block;
+	*display: inline;
+	*zoom: 1;
+}
+
+audio:not([controls]) {
+	display: none;
+	height: 0;
+}
+[hidden] {
+	display: none;
+}
+
+html,
+button,
+input,
+select,
+textarea {
+	font-family: sans-serif;
+}
+
+body {
+	margin: 0;
+}
+
+a:focus {
+	outline: thin dotted;
+}
+
+
+a:active,
+a:hover {
+	outline: 0;
+}
+
+
+h1 {
+	font-size: 2em;
+}
+
+h2 {
+	font-size: 1.5em;
+	margin: 0.83em 0;
+}
+
+h3 {
+	font-size: 1.17em;
+	margin: 1em 0;
+}
+
+h4 {
+	font-size: 1em;
+	margin: 1.33em 0;
+}
+
+h5 {
+	font-size: 0.83em;
+	margin: 1.67em 0;
+}
+
+h6 {
+	font-size: 0.67em;
+	margin: 2.33em 0;
+}
+
+abbr[title] {
+	border-bottom: 1px dotted;
+}
+
+
+b,
+strong {
+	font-weight: bold;
+}
+
+blockquote {
+	margin: 1em 40px;
+}
+
+dfn {
+	font-style: italic;
+}
+
+
+hr {
+	-moz-box-sizing: content-box;
+	box-sizing: content-box;
+	height: 0;
+}
+
+mark {
+	background: #ff0;
+	color: #000;
+}
+
+
+
+code,
+kbd,
+pre,
+samp {
+	font-family: monospace, serif;
+	_font-family: 'courier new', monospace;
+	font-size: 1em;
+}
+
+pre {
+	white-space: pre;
+	white-space: pre-wrap;
+	word-wrap: break-word;
+}
+
+
+q {
+	quotes: none;
+}
+
+
+q:before,
+q:after {
+	content: '';
+	content: none;
+}
+
+
+small {
+	font-size: 80%;
+}
+
+sub,
+sup {
+	font-size: 75%;
+	line-height: 0;
+	position: relative;
+	vertical-align: baseline;
+}
+
+sup {
+	top: -0.5em;
+}
+
+sub {
+	bottom: -0.25em;
+}
+
+
+
+dl,
+menu,
+ol,
+ul {
+	margin: 1em 0;
+}
+
+dd {
+	margin: 0 0 0 40px;
+}
+
+
+menu,
+ol,
+ul {
+	padding: 0 0 0 40px;
+}
+
+
+nav ul,
+nav ol {
+	list-style: none;
+	list-style-image: none;
+}
+
+img {
+	border: 0; /* 1 */
+	-ms-interpolation-mode: bicubic; /* 2 */
+}
+
+
+
+svg:not(:root) {
+	overflow: hidden;
+}
+
+
+
+figure {
+	margin: 0;
+}
+
+
+
+form {
+	margin: 0;
+}
+
+
+
+fieldset {
+	border: 1px solid #c0c0c0;
+	margin: 0 2px;
+	padding: 0.35em 0.625em 0.75em;
+}
+
+
+legend {
+	border: 0; /* 1 */
+	padding: 0;
+	white-space: normal; /* 2 */
+	*margin-left: -7px; /* 3 */
+}
+
+
+
+button,
+input,
+select,
+textarea {
+	font-size: 100%; /* 1 */
+	margin: 0; /* 2 */
+	vertical-align: baseline; /* 3 */
+	*vertical-align: middle; /* 3 */
+}
+
+
+
+button,
+input {
+	line-height: normal;
+}
+
+
+
+button,
+select {
+	text-transform: none;
+}
+
+
+
+button,
+html input[type="button"], /* 1 */
+input[type="reset"],
+input[type="submit"] {
+	-webkit-appearance: button; /* 2 */
+	cursor: pointer; /* 3 */
+	*overflow: visible;  /* 4 */
+}
+
+
+
+button[disabled],
+html input[disabled] {
+	cursor: default;
+}
+
+
+
+input[type="checkbox"],
+input[type="radio"] {
+	box-sizing: border-box; /* 1 */
+	padding: 0; /* 2 */
+	*height: 13px; /* 3 */
+	*width: 13px; /* 3 */
+}
+
+
+
+input[type="search"] {
+	-webkit-appearance: textfield; /* 1 */
+	-moz-box-sizing: content-box;
+	-webkit-box-sizing: content-box; /* 2 */
+	box-sizing: content-box;
+}
+
+
+
+input[type="search"]::-webkit-search-cancel-button,
+input[type="search"]::-webkit-search-decoration {
+	-webkit-appearance: none;
+}
+
+
+
+button::-moz-focus-inner,
+input::-moz-focus-inner {
+	border: 0;
+	padding: 0;
+}
+
+
+
+textarea {
+	overflow: auto; /* 1 */
+	vertical-align: top; /* 2 */
+}
+
+
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
